# xpid

./: .gitignore  README.md  pyproject.toml
src/xpid/: cli.py  config.py  core.py  geometry.py  prep.py  residue_ss.py
