[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpid"                          
version = "0.0.2"                       
description = "XH-/PI interaction detection"
readme = "README.md"
authors = [{name = "Sean Wang", email = "sean.wannng@gmail.com"}]
license = {text = "MIT"}           
requires-python = ">=3.8"             
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# dependencies = ["requests", "numpy>=1.21"]

[project.scripts]
xpid = "xpid.cli:main"

[project.urls]
Homepage = "https://github.com/SeanWang5868/xpid"  

[tool.setuptools.packages.find]
where = ["src"]
# namespaces = false